--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-typed": "^2.0.12",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
