Email and mongo Db Connected and added some New UIs

--- a/package.json
+++ b/package.json
@@ -10,24 +10,30 @@
   },
   "dependencies": {
     "@next/font": "^14.2.3",
+    "@react-email/components": "^0.0.19",
     "@tabler/icons-react": "^3.5.0",
     "clsx": "^2.1.1",
     "file-loader": "^6.2.0",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.379.0",
     "mini-svg-data-uri": "^1.4.4",
+    "mongoose": "^8.4.1",
     "next": "14.2.3",
     "nextjs-progressbar": "^0.0.16",
+    "nodemailer": "^6.7.5",
     "react": "^18",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
+    "react-email": "^2.1.4",
     "react-icons": "^5.2.1",
     "react-typed": "^2.0.12",
+    "resend": "^3.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.14.0",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
