--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "next": "14.2.3",
     "nextjs-progressbar": "^0.0.16",
     "nodemailer": "^6.7.5",
-    "react": "^18",
+    "react": "18.2.0",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-email": "^2.1.4",
