--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ NEXT_PUBLIC_RESEND_API_KEY=re_YZCFeKVz_85E1D36nt8pGHvD1BeUeoprN
 
 
 NEXT_PUBLIC_MONGO_URI=mongodb+srv://sanbedan:P14vaXVvwEw9p2N5@landing.uixmtmu.mongodb.net/?retryWrites=true&w=majority&appName=landing
+MAILTRAP_USER=5212e2aa954cb3
+MAILTRAP_PASS=4e996bc82d80bb
+
+
+# NEXT_PUBLIC_MEASUREMENT_ID=G-XXXXXXXXXX
