--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
+    "next-seo": "^6.5.0",
     "nextjs-progressbar": "^0.0.16",
     "nodemailer": "^6.7.5",
     "react": "18.2.0",
