--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "^14.2.3",
     "@react-email/components": "^0.0.19",
     "@tabler/icons-react": "^3.5.0",
+    "blurhash": "^2.0.5",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "headlessui": "^0.0.0",
