--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-email": "^2.1.4",
     "react-icons": "^5.2.1",
+    "react-select": "^5.8.0",
     "resend": "^3.2.0",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
