setup graphql-request and codegen

--- a/.env
+++ b/.env
@@ -5,5 +5,8 @@ NEXT_PUBLIC_MONGO_URI=mongodb+srv://sanbedan:P14vaXVvwEw9p2N5@landing.uixmtmu.mo
 MAILTRAP_USER=5212e2aa954cb3
 MAILTRAP_PASS=4e996bc82d80bb
 
+# server URI
+NEXT_PUBLIC_SERVER_URL=http://localhost:4000/graphql
+
 
 # NEXT_PUBLIC_MEASUREMENT_ID=G-XXXXXXXXXX
