--- a/package.json
+++ b/package.json
@@ -6,27 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/introspection": "^4.0.3",
+    "@graphql-codegen/typescript": "^4.0.7",
+    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
+    "@graphql-codegen/typescript-operations": "^4.2.1",
     "@headlessui/react": "^2.0.4",
     "@next/font": "^14.2.3",
-    "@react-email/components": "^0.0.19",
     "@tabler/icons-react": "^3.5.0",
     "blurhash": "^2.0.5",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
+    "graphql": "^16.8.2",
+    "graphql-request": "^7.0.1",
     "headlessui": "^0.0.0",
     "lucide-react": "^0.379.0",
     "mini-svg-data-uri": "^1.4.4",
-    "mongoose": "^8.4.1",
     "next": "14.2.3",
     "next-seo": "^6.5.0",
     "nextjs-progressbar": "^0.0.16",
-    "nodemailer": "^6.7.5",
     "react": "18.2.0",
     "react-dom": "^18",
-    "react-email": "^2.1.4",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
     "resend": "^3.2.0",
@@ -36,8 +40,8 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@graphql-codegen/typescript-react-apollo": "^4.3.0",
     "@types/node": "^20.14.0",
-    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
