--- a/package.json
+++ b/package.json
@@ -5,32 +5,40 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/typescript": "^4.0.9",
+    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
+    "@graphql-codegen/typescript-operations": "^4.2.3",
     "@headlessui/react": "^2.0.4",
-    "@next/font": "^14.2.3",
     "@react-email/components": "^0.0.19",
     "@tabler/icons-react": "^3.5.0",
     "blurhash": "^2.0.5",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
     "headlessui": "^0.0.0",
     "lucide-react": "^0.379.0",
     "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
     "next-seo": "^6.5.0",
+    "next-sitemap": "^4.2.3",
     "nextjs-progressbar": "^0.0.16",
     "nodemailer": "^6.7.5",
+    "posthog-js": "^1.144.2",
     "react": "18.2.0",
     "react-dom": "^18",
     "react-email": "^2.1.4",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
     "resend": "^3.2.0",
-    "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
